// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    href="/"
    target="_top"
  >
    <div
      class="sc-313ded62-1 gCaKcI undefined "
    >
      <span>
        button test
      </span>
    </div>
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-313ded62-2 jkFKqP undefined "
  >
    <span>
      button test
    </span>
  </button>
</div>
`;
